Fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,9 @@
   box-sizing: border-box;
 }
 
+div#popup {
+    overflow: hidden;
+}
 
 body{
   margin: 0;
